unpackaged/main/default/objects/OrderApi__Tax_Locale__c/OrderApi__Tax_Locale__c.object-meta.xml
<CustomObject>
    <description>Along with the Item Class and Item, this object is used to help calculate the tax rate for taxable items.  This object defines the Tax GL Account and Tax Locales for Tax Classes.</description>
    <label>Tax Locale</label>
    <nameField>
        <label>Tax Locale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>