unpackaged/main/default/objects/OrderApi__Tax_Locale__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Tax Locale to a Business Group.</description>
    <inlineHelpText>Links the Tax Locale to a Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Tax Locales</relationshipLabel>
    <relationshipName>Tax_Locales</relationshipName>
    <type>Lookup</type>
</CustomField>