unpackaged/main/default/objects/OrderApi__Tax_Locale__c/fields/OrderApi__Locale_Values_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Locale_Values_CSV__c</fullName>
    <description>Enter the possible values for the field defined in the Tax Locale Field using comma separated values.</description>
    <inlineHelpText>Enter the possible values for the field defined in the Tax Locale Field using comma separated values.</inlineHelpText>
    <label>Locale Values (CSV)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>