unpackaged/main/default/objects/OrderApi__Tax_Locale__c/fields/OrderApi__Tax_Locale_Field__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Locale_Field__c</fullName>
    <description>In this field, enter the API name of the Sales Order Line field the system is to evaluate for the tax locale. (Ex. OrderApi__Shipping_Country__c)</description>
    <inlineHelpText>In this field, enter the API name of the Sales Order Line field the system is to evaluate for the tax locale. (Ex. OrderApi__Shipping_Country__c)</inlineHelpText>
    <label>Tax Locale Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>